setting up navbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,4 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-
+::-webkit-input-placeholder {
+  font-style: italic;
+}
+:-moz-placeholder {
+  font-style: italic;  
+}
+::-moz-placeholder {
+  font-style: italic;  
+}
+:-ms-input-placeholder {  
+  font-style: italic; 
+}
